--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </section>
     <!--Чим ми займаємося-->
-    <section class="section" centered>
+    <section class="section" >
         <div class="container">
             <h2 class="section-title" >Чим ми займаємося</h2>
             <ul class="works list" >
