--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button type="button" class="button" >Замовити послугу</button>
     </section>
     <!--Наші переваги-->
-    <section class="section" >
+    <section class="section feature-section" >
         <div class="container">
             <h2 hidden>Наші плюси</h2>
             <ul class="feature-list list" >
