--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button type="button" class="button" >Замовити послугу</button>
     </section>
     <!--Наші переваги-->
-    <section class="section feature-section" >
+    <section class="section" >
         <div class="container">
             <h2 hidden>Наші плюси</h2>
             <ul class="feature-list list" >
@@ -69,36 +69,38 @@
         </div>
     </section>
     <!--Чим ми займаємося-->
-    <section class="section" >
+    <section class="section second-section" >
         <div class="container">
             <h2 class="section-title" >Чим ми займаємося</h2>
             <ul class="works list" >
-                <li class="item"><img src="./image/img2.jpg" alt="html" width="370"></li>
-                <li class="item"><img src="./image/img1.jpg" alt="css" width="370"></li>
-                <li class="item"><img src="./image/img3.jpg" alt="design" width="370"></li>
+                <li class="item works-item"><img src="./image/img2.jpg" alt="html" width="370" ></li>
+                <li class="item works-item"><img src="./image/img1.jpg" alt="css" width="370"></li>
+                <li class="item works-item"><img src="./image/img3.jpg" alt="design" width="370"></li>
             </ul>
         </div>
     </section>
     <!--Команда-->
-    <section  >
-        <div class="container comand-section">
+    <section class="section comand-section"  >
+        <div class="container ">
             <h2 class="section-title">Наша команда</h2>
             <ul class="comand list" >
                 <li class="item"><img src="./image/img(5).jpg" alt="employee" width="270">
-                <h3 class="name">Ігор Дем'яненко</h3>
-                <p class="text">Product Designer</p>
+                <div class="card-padding">
+                    <h3 class="name">Ігор Дем'яненко</h3>
+                    <p class="text">Product Designer</p>
+                </div>
                 </li>
                 <li class="item"><img src="./image/img(1).jpg" alt="employee" width="270">
-                    <h3 class="name" >Ольга Рєпіна</h3>
-                    <p class="text">Frontend Developer</p>
+                   <div class="card-padding"><h3 class="name">Ольга Рєпіна</h3>
+                <p class="text">Frontend Developer</p></div> 
                 </li>
                 <li class="item"><img src="./image/img(4).jpg" alt="employee" width="270">
-                    <h3 class="name" >Микола Тарасов</h3>
-                    <p class="text">Marketing</p>
+                    <div class="card-padding"><h3 class="name">Микола Тарасов</h3>
+                    <p class="text">Marketing</p></div>
                 </li>
                 <li class="item"><img src="./image/img.jpg" alt="employee" width="270">
-                    <h3 class="name" >Михайло Єрмаков</h3>
-                    <p class="text">UI Designer</p>
+                    <div class="card-padding"><h3 class="name">Михайло Єрмаков</h3>
+                    <p class="text">UI Designer</p></div>
                 </li>
         
             </ul>
@@ -108,7 +110,7 @@
    <!--Футер-->
     <footer class="footer">
      <div class="container">
-        <a href="./index.html" class="footer-logo"> <span class="piece-logo">Web</span>Studio</a>
+        <div class="margin-logo"><a href="./index.html" class="footer-logo"> <span class="piece-logo">Web</span>Studio</a></div>
         <address >
            <ul class="contact list">
             <li class="item"><a href="https://goo.gl/maps/THnfHU8SYMGnc4647" class="addres"  >м.Київ , пр-т Лесі Українки ,26</a></li>
