--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
   </head>
   <body class="body">
     <!--Шапка-->
-      <header>
-        <div class="container top-line">
+      <header class="heder-portfolio">
+        <div class="container top-line ">
       
           <nav class=" conteiner-nav">
             <a href="./index.html" class="logo"> <span class="piece-logo">Web</span>Studio</a>
@@ -44,7 +44,7 @@
       </header>
     <main>
       <!-- Фильтры -->
-      <section class="section">
+      <section class="section ">
         <div class="container-filters ">
           <h1 hidden>Портфоліо</h1>
           
@@ -68,64 +68,82 @@
                     alt="Ноутбук з Веб сайтом"
                     width="370"
                   />
-                  <h2 class="work-title">Технокряк</h2>
-                  <p class="work-text">Веб-сайт</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Технокряк</h2>
+                    <p class="work-text">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p2.jpg" alt="Постер" width="370" />
-                  <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="work-text">Дизайн</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="work-text">Дизайн</p>
+                  </div >
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p3.jpg" alt="Ресторан Seafood" width="370" />
-                  <h2 class="work-title">Ресторан Seafood</h2>
-                  <p class="work-text">Додаток</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Ресторан Seafood</h2>
+                    <p class="work-text">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p4.jpg" alt="Навушники" width="370" />
-                  <h2 class="work-title">Проєкт Prime</h2>
-                  <p class="work-text">Маркетинг</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Проєкт Prime</h2>
+                    <p class="work-text">Маркетинг</p>
+                  </div>
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p5.jpg" alt="Дві коробки" width="370" />
-                  <h2 class="work-title">Проєкт Boxes</h2>
-                  <p class="work-text">Додаток</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Проєкт Boxes</h2>
+                    <p class="work-text">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p6.jpg" alt="Веб-сайт" width="370" />
-                  <h2 class="work-title">Inspiration has no Borders</h2>
-                  <p class="work-text">Веб-сайт</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Inspiration has no Borders</h2>
+                    <p class="work-text">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p7.jpg" alt="Книга" width="370" />
-                  <h2 class="work-title">Видання Limited Edition</h2>
-                  <p class="work-text">Дизайн</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Видання Limited Edition</h2>
+                    <p class="work-text">Дизайн</p>
+                  </div>
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p8.jpg" alt="Ярлик" width="370" />
-                  <h2 class="work-title">Проєкт LAB</h2>
-                  <p class="work-text">Маркетинг</p>
+                 <div class="work-card">
+                    <h2 class="work-title">Проєкт LAB</h2>
+                    <p class="work-text">Маркетинг</p>
+                 <div class="work-card">
                 </a>
               </li>
               <li class="work-item">
                 <a href="#">
                   <img src="./image/p9.jpg" alt="Додаток" width="370" />
-                  <h2 class="work-title">Growing Business</h2>
-                  <p class="work-text">Додаток</p>
+                  <div class="work-card">
+                    <h2 class="work-title">Growing Business</h2>
+                    <p class="work-text">Додаток</p>
+                  </div>
                 </a>
               </li>
             </ul>
@@ -136,7 +154,7 @@
     <!--Футер-->
   <footer class="footer">
     <div class="container">
-      <a href="./index.html" class="footer-logo"> <span class="piece-logo">Web</span>Studio</a>
+      <div class="margin-logo"><a href="./index.html" class="footer-logo"> <span class="piece-logo">Web</span>Studio</a></div>
       <address>
         <ul class="contact list">
           <li class="item"><a href="https://goo.gl/maps/THnfHU8SYMGnc4647" class="addres">м.Київ , пр-т Лесі Українки
