--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <header class="heder-portfolio">
         <div class="container top-line ">
       
-          <nav class=" conteiner-nav">
+          <nav class=" container-nav">
             <a href="./index.html" class="logo"> <span class="piece-logo">Web</span>Studio</a>
             <ul class="site-nav list">
               <li class="item"><a href="./index.html" class="link ">Студія</a></li>
@@ -45,7 +45,7 @@
     <main>
       <!-- Фильтры -->
       <section class="section ">
-        <div class="container-filters ">
+        <div class="container container-filters ">
           <h1 hidden>Портфоліо</h1>
           
             <ul class="filter list">
@@ -134,7 +134,7 @@
                  <div class="work-card">
                     <h2 class="work-title">Проєкт LAB</h2>
                     <p class="work-text">Маркетинг</p>
-                 <div class="work-card">
+                 </div >
                 </a>
               </li>
               <li class="work-item">
