--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Шапка-->
     <header>
       <div class="container top-line">
-        <nav class="conteiner-nav">
+        <nav class="container-nav">
           <a href="./index.html" class="logo">
             <span class="piece-logo">Web</span>Studio</a
           >
