--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   </head>
   <body class="body">
     <!--Шапка-->
-      <header class="heder-portfolio">
+      <header class="header-portfolio">
         <div class="container top-line ">
       
           <nav class=" container-nav">
