--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
     <main>
       <!--Заголовок-->
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
+        <div class="container">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="button">Замовити послугу</button>
+        </div>
       </section>
       <!--Наші переваги-->
       <section class="section">
